generate components template

--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,1 +1,6 @@
-<p>project works!</p>
+<div class="card">
+    <div class="card-body">
+        <h4 class="card-title bg-info text-white rounded-2 p-2">{{project.name | titlecase }}</h4>
+        <p class="card-text">{{project.description}}</p>
+    </div>
+</div>
