--- a/src/app/category-menu/category-menu.component.html
+++ b/src/app/category-menu/category-menu.component.html
@@ -1,1 +1,5 @@
-<p>category-menu works!</p>
+<div class="list-group" *ngFor="let category of categories">
+    <a href="#" class="list-group-item list-group-item-action">
+      {{category.name}}
+    </a>  
+  </div>
