--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -1,1 +1,5 @@
-<p>project-list works!</p>
+<div class="container">
+   <div class="col-12" *ngFor="let project of projects">
+       <app-project [current]="project"></app-project>
+   </div>
+</div>
