--- a/src/app/header-menu/header-menu.component.html
+++ b/src/app/header-menu/header-menu.component.html
@@ -17,8 +17,8 @@
               Dropdown
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" routerLink="categories/addnew" >Yeni Kategori Ekle</a></li>
+              <li><a class="dropdown-item" routerLink="projects/addnew" >Yeni Proje Ekle</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
