--- a/src/app/header-menu/header-menu.component.html
+++ b/src/app/header-menu/header-menu.component.html
@@ -14,13 +14,14 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
+              İşlemler
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" routerLink="categories/addnew" >Yeni Kategori Ekle</a></li>
               <li><a class="dropdown-item" routerLink="projects/addnew" >Yeni Proje Ekle</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item" routerLink="login">Giriş yap</a></li>
+              <li><a class="dropdown-item" (click)="logout($event)" >Çıkış Yap</a></li>
             </ul>
           </li>
           <li class="nav-item">
